Add Login Screen

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -23,5 +23,10 @@
   "storybook": {
     "placeholder": "Placeholder",
     "field": "Field"
+  },
+  "loginScreen": {
+    "title": "Welcome!",
+    "signin": "Sign In",
+    "signup": "Sign Up",
   }
 }
