Migrating Drawer Navigator, step 1

--- a/app/i18n/en.json
+++ b/app/i18n/en.json
@@ -28,5 +28,11 @@
     "title": "Welcome!",
     "signin": "Sign In",
     "signup": "Sign Up",
+  },
+  "homeScreen": {
+    "title": "Home",
+  },
+  "productsScreen": {
+    "title": "Products",
   }
 }
